[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/LiberationSans-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://src/TitleScreenScene.gd" type="Script" id=2]
[ext_resource path="res://assets/Orbitron Medium.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/480px-CoE-NGOs-cycle-decision-making-modified.svg.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 45
font_data = ExtResource( 3 )

[sub_resource type="DynamicFontData" id=2]
font_path = "res://assets/LiberationSans-Regular.ttf"

[sub_resource type="DynamicFont" id=3]
size = 38
font_data = SubResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 38
font_data = SubResource( 2 )

[sub_resource type="DynamicFont" id=9]
size = 38
font_data = SubResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 38
font_data = SubResource( 2 )

[sub_resource type="DynamicFontData" id=6]
font_path = "res://assets/LiberationSans-Regular.ttf"

[sub_resource type="DynamicFont" id=7]
size = 38
font_data = SubResource( 6 )

[sub_resource type="DynamicFont" id=8]
size = 20
font_data = ExtResource( 1 )

[node name="Control" type="CenterContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -200.0
rect_min_size = Vector2( 100, 100 )
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_top = 85.0
margin_right = 492.0
margin_bottom = 515.0
custom_constants/separation = 80

[node name="CycleSprite" type="Sprite" parent="VBoxContainer"]
position = Vector2( 147.087, 67.1142 )
rotation = -2.0944
scale = Vector2( 0.587251, 0.587251 )
texture = ExtResource( 4 )

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
margin_right = 492.0
margin_bottom = 46.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "SprintCycle"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 126.0
margin_right = 492.0
margin_bottom = 326.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewGameButton" type="Button" parent="VBoxContainer/VBoxContainer2"]
margin_right = 492.0
margin_bottom = 50.0
custom_fonts/font = SubResource( 3 )
text = "TITLESCREEN_NEWGAME"

[node name="ContinueButton" type="Button" parent="VBoxContainer/VBoxContainer2"]
visible = false
margin_top = 50.0
margin_right = 492.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 4 )
disabled = true
text = "TITLESCREEN_CONTINUE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HelpButton" type="Button" parent="VBoxContainer/VBoxContainer2"]
margin_top = 50.0
margin_right = 492.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 9 )
text = "TITLESCREEN_HELP"

[node name="SettingsButton" type="Button" parent="VBoxContainer/VBoxContainer2"]
margin_top = 100.0
margin_right = 492.0
margin_bottom = 150.0
custom_fonts/font = SubResource( 5 )
text = "TITLESCREEN_SETTINGS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreditsButton" type="Button" parent="VBoxContainer/VBoxContainer2"]
margin_top = 150.0
margin_right = 492.0
margin_bottom = 200.0
custom_fonts/font = SubResource( 7 )
text = "TITLESCREEN_CREDITS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VersionLabel" type="Label" parent="VBoxContainer"]
margin_top = 406.0
margin_right = 492.0
margin_bottom = 430.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 8 )
text = "v0.2"
__meta__ = {
"_edit_use_anchors_": false
}
